Upgrade to Java 17. Few required changes. Lots of changes to utilize new language features. Some optimizations.
Former-commit-id: 5ed52b9a2cb9270eba97c6720b1fa1dbb2a31d89 [formerly c8a7e47d1cff315293966c4de504a4521c537cc1] [formerly f70802973b77408a95fc3b46ca8b07c2ab302f55 [formerly ed2c548879c12d9f4ef55098699dab15ad6f9d37]]
Former-commit-id: 9d955d016d982466a9fc87acd77246a7f9c05a28 [formerly 4f4ae5aff55a4d79c0dae27de3ff2d07b4b14569]
Former-commit-id: e39e376f4c44ebb3b79b67ad713d1b5ba7d40b04
Former-commit-id: 6e52cf5705e3f3cc49d0bc18f18abbb67a028ddb