@@ -73,7 +73,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMaxValue(int index) {
+    public boolean isMaxValue(final int index) {
         return get(index) == Short.MAX_VALUE;
     }
 
@@ -84,7 +84,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMissingValue(int index) {
+    public boolean isMissingValue(final int index) {
         return maxIsMV && isMaxValue(index);
     }
 
@@ -101,7 +101,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param primitiveArray a primitiveArray of any type 
      */
-    public ShortArray(PrimitiveArray primitiveArray) {
+    public ShortArray(final PrimitiveArray primitiveArray) {
         array = new short[primitiveArray.size()]; //exact size
         append(primitiveArray);
     }
@@ -113,7 +113,7 @@ public class ShortArray extends PrimitiveArray {
      * @param active if true, size will be set to capacity and all elements 
      *    will equal 0; else size = 0.
      */
-    public ShortArray(int capacity, boolean active) {
+    public ShortArray(final int capacity, final boolean active) {
         Math2.ensureMemoryAvailable(2L * capacity, "ShortArray");
         array = new short[capacity];
         if (active) 
@@ -126,7 +126,7 @@ public class ShortArray extends PrimitiveArray {
      * @param first the value of the first element.
      * @param last the value of the last element (inclusive).
      */
-    public ShortArray(int first, int last) {
+    public ShortArray(final int first, final int last) {
         size = last - first + 1;
         array = new short[size];
         for (int i = 0; i < size; i++) 
@@ -139,7 +139,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param anArray the array to be used as this object's array.
      */
-    public ShortArray(short[] anArray) {
+    public ShortArray(final short[] anArray) {
         array = anArray;
         size = anArray.length;
     }
@@ -153,7 +153,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param charArray 
      */
-    public ShortArray(char[] charArray) {
+    public ShortArray(final char[] charArray) {
         size = charArray.length;
         array = new short[size];
         for (int i = 0; i < size; i++)
@@ -172,11 +172,11 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param ca CharArray 
      */
-    public static ShortArray fromCharArrayBytes(CharArray ca) {
-        int size = ca.size();
-        ShortArray sa = new ShortArray(size, true); //active
-        short sarray[] = sa.array;
-        char  carray[] = ca.array;
+    public static ShortArray fromCharArrayBytes(final CharArray ca) {
+        final int size = ca.size();
+        final ShortArray sa = new ShortArray(size, true); //active
+        final short sarray[] = sa.array;
+        final char  carray[] = ca.array;
         for (int i = 0; i < size; i++)
             sarray[i] = (short)carray[i];
         return sa;
@@ -192,7 +192,7 @@ public class ShortArray extends PrimitiveArray {
      * @param csv the comma-separated-value string
      * @return a ShortArray from the comma-separated values.
      */
-    public static ShortArray fromCSV(String csv) {
+    public static ShortArray fromCSV(final String csv) {
         return (ShortArray)PrimitiveArray.csvFactory(PAType.SHORT, csv);
     }
 
@@ -235,6 +235,7 @@ public class ShortArray extends PrimitiveArray {
         for (int i = 0; i < size; i++)
             code = 31*code + array[i];
         return code;
+        //return HashDigest.murmur32(array, size);
     }
 
     /**
@@ -249,7 +250,7 @@ public class ShortArray extends PrimitiveArray {
      *    If new, it will have a backing array with a capacity equal to its size.
      *    If stopIndex &lt; startIndex, this returns PrimitiveArray with size=0;
      */
-    public PrimitiveArray subset(PrimitiveArray pa, int startIndex, int stride, int stopIndex) {
+    public PrimitiveArray subset(final PrimitiveArray pa, final int startIndex, final int stride, int stopIndex) {
         if (pa != null) 
             pa.clear();
         if (startIndex < 0)
@@ -263,7 +264,7 @@ public class ShortArray extends PrimitiveArray {
         if (stopIndex < startIndex)
             return pa == null? new ShortArray(new short[0]) : pa;  //no need to call .setMaxIsMV(maxIsMV) since size=0
 
-        int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
+        final int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
         ShortArray sa = null;
         if (pa == null) {
             sa = new ShortArray(willFind, true);
@@ -272,7 +273,7 @@ public class ShortArray extends PrimitiveArray {
             sa.ensureCapacity(willFind);
             sa.size = willFind;
         }
-        short tar[] = sa.array;
+        final short tar[] = sa.array;
         if (stride == 1) {
             System.arraycopy(array, startIndex, tar, 0, willFind);
         } else {
@@ -299,20 +300,21 @@ public class ShortArray extends PrimitiveArray {
      * @return the minimum PAType needed to completely and precisely contain
      * the values in this PA's PAType and tPAType (e.g., when merging two PrimitiveArrays).
      */
-    public PAType needPAType(PAType tPAType) {
-        //if tPAType is smaller or same
-        if (tPAType == PAType.BYTE ||
-            tPAType == PAType.UBYTE ||
-            tPAType == PAType.SHORT)  return PAType.SHORT;
+    public PAType needPAType(final PAType tPAType) {
+        return switch (tPAType) {
+            //if tPAType is smaller or same
+            case BYTE, UBYTE, SHORT -> PAType.SHORT;
 
-        //if sideways
-        if (tPAType == PAType.CHAR)   return PAType.STRING;
-        if (tPAType == PAType.USHORT) return PAType.INT;
-        if (tPAType == PAType.UINT)   return PAType.LONG;
-        if (tPAType == PAType.ULONG)  return PAType.STRING;
+            //if sideways
+            case CHAR   -> PAType.STRING;
+            case USHORT -> PAType.INT;
+            case UINT   -> PAType.LONG;
+            case ULONG  -> PAType.STRING;
 
-        //if tPAType is bigger. INT, LONG, FLOAT, DOUBLE, STRING
-        return tPAType;
+            //if tPAType is bigger. INT, LONG, FLOAT, DOUBLE, STRING
+            default -> tPAType;
+        };
+
     }
 
     /**
@@ -320,7 +322,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param value the value to be added to the array
      */
-    public void add(short value) {
+    public void add(final short value) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         array[size++] = value;
@@ -335,10 +337,10 @@ public class ShortArray extends PrimitiveArray {
      *    then convert DoubleArray to ShortArray.)
      *    If null or not a Number, this adds Short.MAX_VALUE.
      */
-    public void addObject(Object value) {
+    public void addObject(final Object value) {
         //double is good intermediate because it has the idea of NaN
-        addDouble(value != null && value instanceof Number?
-            ((Number)value).doubleValue() : Double.NaN); 
+        addDouble(value != null && value instanceof Number nu?
+            nu.doubleValue() : Double.NaN); 
     }
 
     /**
@@ -347,7 +349,7 @@ public class ShortArray extends PrimitiveArray {
      * @param sd from an .nc file
      * @param memberName
      */
-    public void add(StructureData sd, String memberName) {
+    public void add(final StructureData sd, final String memberName) {
         add(sd.getScalarShort(memberName));
     }
 
@@ -356,8 +358,8 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param ar an array
      */
-    public void add(short ar[]) {
-        int arSize = ar.length; 
+    public void add(final short ar[]) {
+        final int arSize = ar.length; 
         ensureCapacity(size + (long)arSize);
         System.arraycopy(ar, 0, array, size, arSize);
         size += arSize;
@@ -370,7 +372,7 @@ public class ShortArray extends PrimitiveArray {
      * @param value the value to be added to the array.
      *    n &lt; 0 throws an Exception.
      */
-    public void addN(int n, short value) {
+    public void addN(final int n, final short value) {
         if (n == 0) return;
         if (n < 0)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -387,7 +389,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index the position where the value should be inserted.
      * @param value the value to be inserted into the array
      */
-    public void atInsert(int index, short value) {
+    public void atInsert(final int index, final short value) {
         if (index < 0 || index > size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayAtInsert, getClass().getSimpleName(), "" + index, "" + size));
@@ -405,8 +407,8 @@ public class ShortArray extends PrimitiveArray {
      * @param index 0..
      * @param value the value, as a String.
      */
-    public void atInsertString(int index, String value) {
-        int ti = String2.parseInt(value); //NaN -> Integer.MAX_VALUE
+    public void atInsertString(final int index, final String value) {
+        final int ti = String2.parseInt(value); //NaN -> Integer.MAX_VALUE
         if (ti < Short.MIN_VALUE || ti > Short.MAX_VALUE) {
             maxIsMV = true;
             atInsert(index, Short.MAX_VALUE);
@@ -422,7 +424,7 @@ public class ShortArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a PAOne (or null).
      */
-    public void addNPAOnes(int n, PAOne value) {
+    public void addNPAOnes(final int n, final PAOne value) {
         addNInts(n, value == null? Integer.MAX_VALUE : value.getInt());  //handles NaN and MV
     }
 
@@ -433,7 +435,7 @@ public class ShortArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a String.
      */
-    public void addNStrings(int n, String value) {
+    public void addNStrings(final int n, final String value) {
         addNInts(n, String2.parseInt(value)); //handles NaN and MV
     }
 
@@ -444,7 +446,7 @@ public class ShortArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a float.
      */
-    public void addNFloats(int n, float value) {
+    public void addNFloats(final int n, final float value) {
         if (!maxIsMV && (!Float.isFinite(value) || value < Short.MIN_VALUE || value > Short.MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToShort(value));
@@ -457,7 +459,7 @@ public class ShortArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a double.
      */
-    public void addNDoubles(int n, double value) {
+    public void addNDoubles(final int n, final double value) {
         if (!maxIsMV && (!Double.isFinite(value) || value < Short.MIN_VALUE || value > Short.MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToShort(value));
@@ -469,7 +471,7 @@ public class ShortArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNInts(int n, int value) {
+    public void addNInts(final int n, final int value) {
         if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
             maxIsMV = true;
             addN(n, Short.MAX_VALUE);
@@ -484,7 +486,7 @@ public class ShortArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNLongs(int n, long value) {
+    public void addNLongs(final int n, final long value) {
         if (value < Short.MIN_VALUE || value > Short.MAX_VALUE) {
             maxIsMV = true;
             addN(n, Short.MAX_VALUE);
@@ -501,7 +503,7 @@ public class ShortArray extends PrimitiveArray {
      * @param nValues the number of values to be added
      * @return 'this' for convenience
      */
-    public PrimitiveArray addFromPA(PrimitiveArray otherPA, int otherIndex, int nValues) {
+    public PrimitiveArray addFromPA(final PrimitiveArray otherPA, int otherIndex, final int nValues) {
 
         //add from same type
         if (otherPA.elementType() == elementType()) {
@@ -531,7 +533,7 @@ public class ShortArray extends PrimitiveArray {
      * @param otherPA the other PrimitiveArray
      * @param otherIndex the index of the item in otherPA
      */
-    public void setFromPA(int index, PrimitiveArray otherPA, int otherIndex) {
+    public void setFromPA(final int index, final PrimitiveArray otherPA, final int otherIndex) {
         setInt(index, otherPA.getInt(otherIndex)); //handles maxIsMV
     }
 
@@ -540,7 +542,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param index the element to be removed, 0 ... size-1
      */
-    public void remove(int index) {
+    public void remove(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayRemove, getClass().getSimpleName(), "" + index, "" + size));
@@ -556,7 +558,7 @@ public class ShortArray extends PrimitiveArray {
      * @param from the first element to be removed, 0 ... size
      * @param to one after the last element to be removed, from ... size
      */
-    public void removeRange(int from, int to) {
+    public void removeRange(final int from, final int to) {
         if (to > size)
             throw new IllegalArgumentException(String2.ERROR + " in ShortArray.removeRange: to (" + 
                 to + ") > size (" + size + ").");
@@ -580,8 +582,8 @@ public class ShortArray extends PrimitiveArray {
      * @param last  (exclusive)
      * @param destination the destination, can't be in the range 'first+1..last-1'.
      */
-    public void move(int first, int last, int destination) {
-        String errorIn = String2.ERROR + " in ShortArray.move:\n";
+    public void move(final int first, final int last, final int destination) {
+        final String errorIn = String2.ERROR + " in ShortArray.move:\n";
 
         if (first < 0) 
             throw new RuntimeException(errorIn + "first (" + first + ") must be >= 0.");
@@ -603,8 +605,8 @@ public class ShortArray extends PrimitiveArray {
         //String2.log("move initial " + String2.toCSSVString(array));
 
         //store the range to be moved
-        int nToMove = last - first;
-        short[] temp = new short[nToMove];
+        final int nToMove = last - first;
+        final short[] temp = new short[nToMove];
         System.arraycopy(array, first, temp, 0, nToMove);
 
         //if moving to left...    (draw diagram to visualize this)
@@ -624,7 +626,6 @@ public class ShortArray extends PrimitiveArray {
         }
         //String2.log("move done " + String2.toCSSVString(array));
 
-
     }
 
     /**
@@ -634,7 +635,7 @@ public class ShortArray extends PrimitiveArray {
      *
      * @param bitset The BitSet indicating which rows (indices) should be kept.
      */
-    public void justKeep(BitSet bitset) {
+    public void justKeep(final BitSet bitset) {
         int newSize = 0;
         for (int row = 0; row < size; row++) {
             if (bitset.get(row)) 
@@ -649,7 +650,7 @@ public class ShortArray extends PrimitiveArray {
      * @param minCapacity the minimum acceptable capacity.
      *    minCapacity is type long, but &gt;= Integer.MAX_VALUE will throw exception.
      */
-    public void ensureCapacity(long minCapacity) {
+    public void ensureCapacity(final long minCapacity) {
         if (array.length < minCapacity) {
             //ensure minCapacity is < Integer.MAX_VALUE
             Math2.ensureArraySizeOkay(minCapacity, "ShortArray");  
@@ -658,7 +659,7 @@ public class ShortArray extends PrimitiveArray {
             if (newCapacity < minCapacity) 
                 newCapacity = (int)minCapacity; //safe since checked above
             Math2.ensureMemoryAvailable(2L * newCapacity, "ShortArray");
-            short[] newArray = new short[newCapacity];
+            final short[] newArray = new short[newCapacity];
             System.arraycopy(array, 0, newArray, 0, size);
             array = newArray; //do last to minimize concurrency problems
         }
@@ -699,9 +700,9 @@ public class ShortArray extends PrimitiveArray {
      */
     public double[] toDoubleArray() {
         Math2.ensureMemoryAvailable(8L * size, "ShortArray.toDoubleArray");
-        double dar[] = new double[size];
+        final double dar[] = new double[size];
         for (int i = 0; i < size; i++) {
-            short s = array[i];
+            final short s = array[i];
             dar[i] = maxIsMV && s == Short.MAX_VALUE? Double.NaN : s;
         }
         return dar;
@@ -715,9 +716,9 @@ public class ShortArray extends PrimitiveArray {
      */
     public String[] toStringArray() {
         Math2.ensureMemoryAvailable(8L * size, "ShortArray.toStringArray"); //8L is feeble minimal estimate
-        String sar[] = new String[size];
+        final String sar[] = new String[size];
         for (int i = 0; i < size; i++) {
-            short s = array[i];
+            final short s = array[i];
             sar[i] = maxIsMV && s == Short.MAX_VALUE? "" : String.valueOf(s);
         }
         return sar;
@@ -729,7 +730,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public short get(int index) {
+    public short get(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in ShortArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -742,7 +743,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @param value the value for that element
      */
-    public void set(int index, short value) {
+    public void set(final int index, final short value) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in ShortArray.set: index (" + 
                 index + ") >= size (" + size + ").");
@@ -757,8 +758,8 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as an int. 
      *   If maxIsMV, Short.MAX_VALUE is returned as Integer.MAX_VALUE.
      */
-    public int getInt(int index) {
-        short s = get(index);
+    public int getInt(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? Integer.MAX_VALUE : s;
     }
 
@@ -772,7 +773,7 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as an int. String values are parsed
      *   with String2.parseInt and so may return Integer.MAX_VALUE.
      */
-    public int getRawInt(int index) {
+    public int getRawInt(final int index) {
         return get(index);
     }
 
@@ -783,7 +784,7 @@ public class ShortArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToByte(i).
      */
-    public void setInt(int index, int i) {
+    public void setInt(final int index, final int i) {
         if (i < Short.MIN_VALUE || i > Short.MAX_VALUE) {
             maxIsMV = true;
             set(index, Short.MAX_VALUE);
@@ -799,8 +800,8 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as a long. 
      *   If maxIsMV, Short.MAX_VALUE is returned as Long.MAX_VALUE.
      */
-    public long getLong(int index) {
-        short s = get(index);
+    public long getLong(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? Long.MAX_VALUE : s;
     }
 
@@ -811,7 +812,7 @@ public class ShortArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToShort(long).
      */
-    public void setLong(int index, long i) {
+    public void setLong(final int index, final long i) {
         if (i < Short.MIN_VALUE || i > Short.MAX_VALUE) {
             maxIsMV = true;
             set(index, Short.MAX_VALUE);
@@ -827,8 +828,8 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as a ulong. 
      *   If maxIsMV, MAX_VALUE is returned as null.
      */
-    public BigInteger getULong(int index) {
-        short b = get(index);
+    public BigInteger getULong(final int index) {
+        final short b = get(index);
         return maxIsMV && b == Short.MAX_VALUE? null : new BigInteger("" + b);
     }
 
@@ -839,7 +840,7 @@ public class ShortArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToByte(long).
      */
-    public void setULong(int index, BigInteger i) {
+    public void setULong(final int index, final BigInteger i) {
         setDouble(index, i == null? Double.NaN : i.doubleValue()); //easier to work with. handles NaN. wide range
     }
 
@@ -852,8 +853,8 @@ public class ShortArray extends PrimitiveArray {
      *   with String2.parseFloat and so may return Float.NaN.
      *   If maxIsMV, Short.MAX_VALUE is returned as Float.NaN.
      */
-    public float getFloat(int index) {
-        short s = get(index);
+    public float getFloat(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? Float.NaN : s;
     }
 
@@ -864,7 +865,7 @@ public class ShortArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToShort(d).
      */
-    public void setFloat(int index, float d) {
+    public void setFloat(final int index, final float d) {
         if (!maxIsMV && (!Float.isFinite(d) || d < Short.MIN_VALUE || d > Short.MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToShort(d));
@@ -879,8 +880,8 @@ public class ShortArray extends PrimitiveArray {
      *   with String2.parseDouble and so may return Double.NaN.
      *   If maxIsMV, Short.MAX_VALUE is returned as Double.NaN.
      */
-    public double getDouble(int index) {
-        short s = get(index);
+    public double getDouble(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? Double.NaN : s;
     }
 
@@ -894,7 +895,7 @@ public class ShortArray extends PrimitiveArray {
      */
     public PrimitiveArray makeUnsignedPA() {
         Math2.ensureMemoryAvailable(2L * size, "ShortArray");
-        short ar[] = new short[size];
+        final short ar[] = new short[size];
         System.arraycopy(array, 0, ar, 0, size);
         return new UShortArray(ar);
     }    
@@ -909,7 +910,7 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getUnsignedDouble(int index) {
+    public double getUnsignedDouble(final int index) {
         //or see https://www.unidata.ucar.edu/software/thredds/current/netcdf-java/reference/faq.html#Unsigned
         return Short.toUnsignedInt(get(index));
     }
@@ -925,7 +926,7 @@ public class ShortArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getRawDouble(int index) {
+    public double getRawDouble(final int index) {
         return get(index);
     }
 
@@ -936,7 +937,7 @@ public class ShortArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToShort(d).
      */
-    public void setDouble(int index, double d) {
+    public void setDouble(final int index, final double d) {
         if (!maxIsMV && (!Double.isFinite(d) || d < Short.MIN_VALUE || d > Short.MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToShort(d));
@@ -951,8 +952,8 @@ public class ShortArray extends PrimitiveArray {
      *   or "" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value.
      */
-    public String getString(int index) {
-        short s = get(index);
+    public String getString(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? "" : String.valueOf(s);
     }
 
@@ -964,8 +965,8 @@ public class ShortArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1 
      * @return For numeric types, this returns ("" + ar[index]), or "null" for NaN or infinity.
      */
-    public String getJsonString(int index) {
-        short s = get(index);
+    public String getJsonString(final int index) {
+        final short s = get(index);
         return maxIsMV && s == Short.MAX_VALUE? "null" : String.valueOf(s);
     }
 
@@ -980,7 +981,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as a String. 
      */
-    public String getRawString(int index) {
+    public String getRawString(final int index) {
         return String.valueOf(get(index));
     }
 
@@ -991,7 +992,7 @@ public class ShortArray extends PrimitiveArray {
      * @param s the value. For numeric PrimitiveArray's, it is parsed
      *   with String2.parseInt and narrowed by Math2.narrowToShort(i).
      */
-    public void setString(int index, String s) {
+    public void setString(final int index, final String s) {
         setInt(index, String2.parseInt(s)); //handles mv
     }
 
@@ -1001,7 +1002,7 @@ public class ShortArray extends PrimitiveArray {
      * @param lookFor the value to be looked for
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(short lookFor) {
+    public int indexOf(final short lookFor) {
         return indexOf(lookFor, 0);
     }
 
@@ -1013,7 +1014,7 @@ public class ShortArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(short lookFor, int startIndex) {
+    public int indexOf(final short lookFor, final int startIndex) {
         for (int i = startIndex; i < size; i++) 
             if (array[i] == lookFor) 
                 return i;
@@ -1027,7 +1028,7 @@ public class ShortArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(String lookFor, int startIndex) {
+    public int indexOf(final String lookFor, final int startIndex) {
         if (startIndex >= size)
             return -1;
         return indexOf(Math2.roundToShort(String2.parseInt(lookFor)), startIndex);
@@ -1040,7 +1041,7 @@ public class ShortArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(short lookFor, int startIndex) {
+    public int lastIndexOf(final short lookFor, final int startIndex) {
         if (startIndex >= size)
             throw new IllegalArgumentException(String2.ERROR + " in ShortArray.get: startIndex (" + 
                 startIndex + ") >= size (" + size + ").");
@@ -1057,7 +1058,7 @@ public class ShortArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(String lookFor, int startIndex) {
+    public int lastIndexOf(final String lookFor, final int startIndex) {
         return lastIndexOf(Math2.roundToShort(String2.parseInt(lookFor)), startIndex);
     }
 
@@ -1075,7 +1076,7 @@ public class ShortArray extends PrimitiveArray {
      * @param o the object that will be compared to this ShortArray
      * @return true if equal.  o=null returns false.
      */
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         return testEquals(o).length() == 0;
     }
 
@@ -1087,11 +1088,11 @@ public class ShortArray extends PrimitiveArray {
      * @return a String describing the difference (or "" if equal).
      *   o=null doesn't throw an exception.
      */
-    public String testEquals(Object o) {
+    public String testEquals(final Object o) {
         if (!(o instanceof ShortArray))
             return "The two objects aren't equal: this object is a ShortArray; the other is a " + 
                 (o == null? "null" : o.getClass().getName()) + ".";
-        ShortArray other = (ShortArray)o;
+        final ShortArray other = (ShortArray)o;
         if (other.size() != size)
             return "The two ShortArrays aren't equal: one has " + size + 
                " value(s); the other has " + other.size() + " value(s).";
@@ -1122,7 +1123,7 @@ public class ShortArray extends PrimitiveArray {
      * @return an NCCSV attribute String
      */
     public String toNccsvAttString() {
-        StringBuilder sb = new StringBuilder(size * 8);
+        final StringBuilder sb = new StringBuilder(size * 8);
         for (int i = 0; i < size; i++) 
             sb.append((i == 0? "" : ",") + array[i] + "s");
         return sb.toString();
@@ -1158,7 +1159,7 @@ public class ShortArray extends PrimitiveArray {
      *   the value at index2.  
      *   Think "array[index1] - array[index2]".
      */
-    public int compare(int index1, PrimitiveArray otherPA, int index2) {
+    public int compare(final int index1, final PrimitiveArray otherPA, final int index2) {
         return Integer.compare(getInt(index1), otherPA.getInt(index2));  //int handles mv
     }
 
@@ -1171,7 +1172,7 @@ public class ShortArray extends PrimitiveArray {
      * @param from an index number 0 ... size-1
      * @param to an index number 0 ... size-1
      */
-    public void copy(int from, int to) {
+    public void copy(final int from, final int to) {
         array[to] = array[from];
     }
 
@@ -1184,10 +1185,10 @@ public class ShortArray extends PrimitiveArray {
      * in the sorted list, rank[1] is the row number of the
      * second item in the sorted list, ...).
      */
-    public void reorder(int rank[]) {
-        int n = rank.length;
+    public void reorder(final int rank[]) {
+        final int n = rank.length;
         //new length could be n, but I'll keep it the same array.length as before
-        short newArray[] = new short[array.length]; 
+        final short newArray[] = new short[array.length]; 
         for (int i = 0; i < n; i++)
             newArray[i] = array[rank[i]];
         array = newArray;
@@ -1212,7 +1213,7 @@ public class ShortArray extends PrimitiveArray {
      *    But if size=0, this returns 0.
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos) throws Exception {
+    public int writeDos(final DataOutputStream dos) throws Exception {
         for (int i = 0; i < size; i++)
             dos.writeShort(array[i]);
         return size == 0? 0 : 2;
@@ -1227,7 +1228,7 @@ public class ShortArray extends PrimitiveArray {
      *    (for Strings, this varies; for others it is consistent)
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos, int i) throws Exception {
+    public int writeDos(final DataOutputStream dos, final int i) throws Exception {
         dos.writeShort(array[i]);
         return 2;
     }
@@ -1239,7 +1240,7 @@ public class ShortArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void readDis(DataInputStream dis, int n) throws Exception {
+    public void readDis(final DataInputStream dis, final int n) throws Exception {
         ensureCapacity(size + (long)n);
         for (int i = 0; i < n; i++)
             array[size++] = dis.readShort();
@@ -1253,7 +1254,7 @@ public class ShortArray extends PrimitiveArray {
      * @param dos
      * @throws Exception if trouble
      */
-    public void externalizeForDODS(DataOutputStream dos) throws Exception {
+    public void externalizeForDODS(final DataOutputStream dos) throws Exception {
         dos.writeInt(size);
         dos.writeInt(size); //yes, a second time
         //shorts are written as ints (see dods.dap.Int16PrimitiveVector.externalize)
@@ -1271,7 +1272,7 @@ public class ShortArray extends PrimitiveArray {
      * @param i the index of the element to be written
      * @throws Exception if trouble
      */
-    public void externalizeForDODS(DataOutputStream dos, int i) throws Exception {
+    public void externalizeForDODS(final DataOutputStream dos, final int i) throws Exception {
         dos.writeInt(array[i]); //as if int
     }
 
@@ -1282,7 +1283,7 @@ public class ShortArray extends PrimitiveArray {
      * @param dis
      * @throws IOException if trouble
      */
-    public void internalizeFromDODS(DataInputStream dis) throws java.io.IOException {
+    public void internalizeFromDODS(final DataInputStream dis) throws java.io.IOException {
         int nValues = dis.readInt();
         dis.readInt(); //skip duplicate of nValues
         ensureCapacity(size + (long)nValues);
@@ -1297,7 +1298,7 @@ public class ShortArray extends PrimitiveArray {
      * @param index
      * @throws Exception if trouble
      */
-    public void writeToRAF(RandomAccessFile raf, int index) throws Exception {
+    public void writeToRAF(final RandomAccessFile raf, final int index) throws Exception {
         raf.writeShort(get(index));
     }
 
@@ -1308,7 +1309,7 @@ public class ShortArray extends PrimitiveArray {
      * @param raf the RandomAccessFile
      * @throws Exception if trouble
      */
-    public void readFromRAF(RandomAccessFile raf) throws Exception {
+    public void readFromRAF(final RandomAccessFile raf) throws Exception {
         add(raf.readShort());
     }
 
@@ -1320,13 +1321,13 @@ public class ShortArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with Math2.narrowToChar.
      */
-    public void append(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void append(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof ShortArray) {
+        if (pa instanceof ShortArray sa) {
             if (pa.getMaxIsMV())
                 setMaxIsMV(true);
-            System.arraycopy(((ShortArray)pa).array, 0, array, size, otherSize);
+            System.arraycopy(sa.array, 0, array, size, otherSize);
             size += otherSize;
         } else {
             for (int i = 0; i < otherSize; i++)
@@ -1344,11 +1345,11 @@ public class ShortArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with Math2.narrowToChar.
      */
-    public void rawAppend(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void rawAppend(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof ShortArray) {
-            System.arraycopy(((ShortArray)pa).array, 0, array, size, otherSize);
+        if (pa instanceof ShortArray sa) {
+            System.arraycopy(sa.array, 0, array, size, otherSize);
         } else {
             for (int i = 0; i < otherSize; i++)
                 array[size + i] = Math2.narrowToShort(pa.getRawInt(i)); //this DOESN'T convert mv's
@@ -1365,17 +1366,17 @@ public class ShortArray extends PrimitiveArray {
      * @return a PrimitveArray (the same type as this class) with the unique values, sorted.
      *     If all the values are unique and already sorted, this returns 'this'.
      */
-    public PrimitiveArray makeIndices(IntArray indices) {
+    public PrimitiveArray makeIndices(final IntArray indices) {
         indices.clear();
         if (size == 0) {
             return new ShortArray();
         }
 
         //make a hashMap with all the unique values (associated values are initially all dummy)
-        Integer dummy = new Integer(-1);
-        HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
+        final Integer dummy = Integer.valueOf(-1);
+        final HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
         short lastValue = array[0]; //since lastValue often equals currentValue, cache it
-        hashMap.put(new Short(lastValue), dummy);
+        hashMap.put(Short.valueOf(lastValue), dummy);
         boolean alreadySorted = true;
         for (int i = 1; i < size; i++) {
             short currentValue = array[i];
@@ -1383,13 +1384,13 @@ public class ShortArray extends PrimitiveArray {
                 if (currentValue < lastValue) 
                     alreadySorted = false;
                 lastValue = currentValue;
-                hashMap.put(new Short(lastValue), dummy);
+                hashMap.put(Short.valueOf(lastValue), dummy);
             }
         }
 
         //quickly deal with: all unique and already sorted
-        Set keySet = hashMap.keySet();
-        int nUnique = keySet.size();
+        final Set keySet = hashMap.keySet();
+        final int nUnique = keySet.size();
         if (nUnique == size && alreadySorted) {
             indices.ensureCapacity(size);
             for (int i = 0; i < size; i++)
@@ -1398,8 +1399,8 @@ public class ShortArray extends PrimitiveArray {
         }
 
         //store all the elements in an array
-        Object unique[] = new Object[nUnique];
-        Iterator iterator = keySet.iterator();
+        final Object unique[] = new Object[nUnique];
+        final Iterator iterator = keySet.iterator();
         int count = 0;
         while (iterator.hasNext())
             unique[count++] = iterator.next();
@@ -1412,23 +1413,23 @@ public class ShortArray extends PrimitiveArray {
 
         //put the unique values back in the hashMap with the ranks as the associated values
         //and make tUnique 
-        short tUnique[] = new short[nUnique];
+        final short tUnique[] = new short[nUnique];
         for (int i = 0; i < count; i++) {
-            hashMap.put(unique[i], new Integer(i));
+            hashMap.put(unique[i], Integer.valueOf(i));
             tUnique[i] = ((Short)unique[i]).shortValue();
         }
 
         //convert original values to ranks
-        int ranks[] = new int[size];
+        final int ranks[] = new int[size];
         lastValue = array[0];
-        ranks[0] = ((Integer)hashMap.get(new Short(lastValue))).intValue();
+        ranks[0] = ((Integer)hashMap.get(Short.valueOf(lastValue))).intValue();
         int lastRank = ranks[0];
         for (int i = 1; i < size; i++) {
             if (array[i] == lastValue) {
                 ranks[i] = lastRank;
             } else {
                 lastValue = array[i];
-                ranks[i] = ((Integer)hashMap.get(new Short(lastValue))).intValue();
+                ranks[i] = ((Integer)hashMap.get(Short.valueOf(lastValue))).intValue();
                 lastRank = ranks[i];
             }
         }
@@ -1447,10 +1448,10 @@ public class ShortArray extends PrimitiveArray {
      * @param tTo   the new value (use "" or "NaN" for standard missingValue)
      * @return the number of values switched
      */
-    public int switchFromTo(String tFrom, String tTo) {
-        short from = Math2.roundToShort(String2.parseDouble(tFrom));
-        double d = String2.parseDouble(tTo);
-        short to   = Math2.roundToShort(d);
+    public int switchFromTo(final String tFrom, final String tTo) {
+        final short from = Math2.roundToShort(String2.parseDouble(tFrom));
+        final double d = String2.parseDouble(tTo);
+        final short to   = Math2.roundToShort(d);
         if (from == to)
             return 0;
         int count = 0;
@@ -1515,7 +1516,7 @@ public class ShortArray extends PrimitiveArray {
      */
     public void changeSignedToFromUnsigned() {
         for (int i = 0; i < size; i++) {
-            int i2 = array[i];
+            final int i2 = array[i];
             array[i] = (short)(i2 < 0? i2 + Short.MAX_VALUE + 1 : 
                                        i2 - Short.MAX_VALUE - 1); //order of ops is important
         }
