@@ -228,8 +228,8 @@ public class PseudoRealTimeData implements SGTLine, ActionListener {
       changes_.firePropertyChange("rangeModified", oldRange, xRange_);
     } else {
       changes_.firePropertyChange("dataModified",
-                                  new Integer(count_),
-                                  new Integer(count_+1));
+                                  Integer.valueOf(count_),
+                                  Integer.valueOf(count_+1));
     }
     count_++;
   }
